# OtusBasePythonConspect

l-01/: zoo.py
l-10/: test_db_helper.py  test_solver.py
l-11/: functools_demo.py  itertools_demo.py  os_d.py  pathlib_d.py
l-12/: app.py  demo-config.ini  process_csv.py  process_ini.py
l-13/: app.py  crud.py  schemas.py
l-14/: Dockerfile
l-14/blog/: dependencies.py  requirements.txt
l-15/: docker-compose.yml  example.sql
l-16/: orm1_create_table.py  orm2_classic_model.py  orm3_declarative_model.py  orm4_session_and_relations.py
l-17/: main.py
l-17/blog_app/models/: database.py  (+1 more)
l-18/: docker-compose.yaml  main.py
l-19/: alembic.ini  demo_sync_async.py  pyproject.toml
l-19/alembic/: env.py
l-19/alembic/versions/: 8e232332b36e_added_new_tables_users.py  9a7bb93cdc71_added_new_table_tags_posts_posts_tags_.py
l-19/blog_app/models/: __init__.py  user.py
l-20/: demo_aiohttp.py
l-21/: __init__.py  main.py  requirements-dev.txt  requirements.txt
l-22/: demo_db_async.py  main.py  main_sync.py  requirements-dev.txt  requirements.txt
l-22/blog_app/: app.py  dependencies.py  schemas.py
l-23/: app.py
l-23/templates/: base.html
l-23/views/: products.py
l-24/: app.py
l-24/templates/: base.html
l-25/templates/: base.html
l-26/: app.py  docker-compose.yaml  postgres.env  requirements.txt
l-26/models/: __init__.py  database.py  product.py
l-26/views/: products.py
l-27/: Dockerfile  app.py  config.py  docker-compose.yaml  prestart.sh  requirements.txt
l-27/templates/: base.html
l-27/views/: products.py
l-28/: requirements.txt
(+46 files in other folders)
